[project]
name = "pygti"
version = "0.10.0"
description = "Access public transport information in hamburg, germany."
readme = "README.md"
authors = [
    { name = "vigonotion", email = "1506970+vigonotion@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.13.5", "pydantic>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "ruff>=0.15.14",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
